--- a/index.html
+++ b/index.html
@@ -12,24 +12,46 @@
       text-decoration:line-through;
       text-decoration-color: #cc0000;
     }
-    .box {
+    .titles {
+      margin-top:20%;
+      margin-bottom:auto;
       margin:auto;
-      width: 70%;
-      max-width:850px;
+      width: 60%;
+      max-width:400px;
+      text-align: center;
     }
 
     body {
       font-family: 'Playfair Display', serif;
-      text-align:center;
+    }
+    .img-circle {
+      border-radius: 50%;
+      filter:grayscale(100%);
+      min-width: 100px;
+      max-width: 180px;
     }
 
+    .copy {
+      margin:auto;
+      text-align:justify;
+      width: 70%;
+      max-width: 600px;
+
+    }
   </style>
 </head>
 <body>
-  <div class="box">
-  <h1 class="bad">PROOFITGOOD.CHEAP</h1>
+    <div class="titles">
+  <h1 class="bad">Proofitgood.Cheap</h1>
   <h2>Proof it well, inexpensively.</h2>
-  <p>Professional proofreading services by Dr. Brendan Quinn. Brendan's a Fulbright scholar with years of experience writing and proofreading everything from theses to articles in peer-reviewed journals. So basically, he'll proof it good. If you need him, you can reach him at <a href="mailto:brendan@proofitgood.cheap">brendan@proofitgood.cheap</a>.</p>
-  </div>
+  <img class="img-circle" src="https://www.burnet.edu.au/system/staff_member/portrait/122/square_BrendanQuinn_210x210.jpg">
+</div>
+  <div class="copy">
+
+  <p>Professional proofreading services by Dr. Brendan Quinn. Brendan's a Fulbright scholar with years of experience writing and proofreading everything from theses and dissertations, to articles in peer-reviewed journals. So basically, he'll proof it good. And pretty cheap (rates vary depending on the scope of your project, but suffice it to say, they're reasonable).
+    <br>
+    <br>
+    If you need him, you can reach him at <a href="mailto:brendan@proofitgood.cheap">brendan@proofitgood.cheap</a>.</p>
+</div>
 </body>
 </html>
