--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
   <div class="copy">
 
-  <p>Professional proofreading services by Dr. Brendan Quinn. Brendan's a Fulbright scholar with years of experience writing and proofreading everything from theses and dissertations, to articles in peer-reviewed journals. So basically, he'll proof it good. And pretty cheap (rates vary depending on the scope of your project, but suffice it to say, they're reasonable).
+    <p>Professional proofreading services by <strong>Dr. Brendan Quinn</strong>. Brendan's a Fulbright scholar with years of experience writing and proofreading everything from theses and dissertations, to articles in peer-reviewed journals. So basically, he'll proof it good. And pretty cheap (rates vary depending on the scope of your project, but suffice it to say, they're reasonable).
     <br>
     <br>
     If you need him, you can reach him at <a href="mailto:brendan@proofitgood.cheap">brendan@proofitgood.cheap</a>.</p>
